Set initial height of rows to 22px to prevent layout breaking with jQuery Masonry. jQuery Masonry re-enabled.

--- a/nekostuffs/nekostuffs.css
+++ b/nekostuffs/nekostuffs.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 body {
     color: #ffffff;
     background-color: #000000;
@@ -19,6 +25,9 @@ table.stuffs tr:nth-child(even) { background-color: #0d0d0d; }
 table.stuffs tr:first-child { background-color: #000000; }
 
 table.stuffs th { text-align: left; }
+
+/* table.stuffs td { min-height: 22px; } */
+table.stuffs td { height: 22px; }
 
 table.stuffs .numeric {
     text-align: right;
